<resources>
    <!--Home Screen-->
    <string name="appname">Trgovanje kriptovalutama\n | DEMO |</string>
    <string name="app_name">Binance demo trading app</string>
    <string name="login">Prijava</string>
    <string name="register">Registracija</string>
    <!--Register screen && Profile fragment-->
    <string name="confirmregister">Registriraj me</string>
    <string name="hintname">Ime</string>
    <string name="hintsurname">Prezime</string>
    <string name="hintemail">Email</string>
    <string name="hintpassword">Lozinka</string>
    <string name="hintphonenum">Broj mobitela</string>
    <string name="hintPIN">PIN (4 znamenke)</string>
    <string name="registrationSuccess">Uspješno ste se registrirali!</string>
    <!--Login screen-->
    <string name="hintloginemail">Email</string>
    <string name="hintloginpassword">Lozinka</string>
    <string name="btnsignin">Prijavi se</string>
    <string name="loginSuccess">Uspješno ste se prijavili!</string>
    <!--Validation error messages-->
    <string name="empty_name">Obavezan je unos imena!</string>
    <string name="empty_surname">Ubavezan je unos prezimena!</string>
    <string name="empty_email">Obavezan je unos email adrese!</string>
    <string name="empty_password">Obavezan je unos lozinke!</string>
    <string name="empty_phone_num">Obavezan je unos broja mobitela!</string>
    <string name="empty_pin">Obavezan je unos PIN-a!</string>
    <string name="pin_digits_match">Pin mora sadržavati 4 znamenke!</string>
    <!--Firebase error handlers-->
    <!--Registration errors-->
    <string name="CERTIFICATE_FETCH_FAILED">Nije uspjelo dohvaćanje javnog ključa certifikata koji je potreban za provjeru JNT-a (ID token ili kolačić sesije).</string>
    <string name="EMAIL_ALREADY_EXISTS">Korisnik sa navedenom email adresom postoji.</string>
    <string name="EXPIRED_ID_TOKEN">ID tokena specifičan za verifyIdToken() je istekao.</string>
    <string name="EXPIRED_SESSION_COOKIE">Kolačić sesije koji služi za verifySessionCookie() je istekao.</string>
    <string name="INVALID_DYNAMIC_LINK_DOMAIN">Navedena domena sa dinamičkim linkom nije konfigurirana ili dozvoljena na trenutnom projektu. Povezano je sa API-jima za email.</string>
    <string name="INVALID_ID_TOKEN">ID token specifičan za verifyIdToken() je neispravan.</string>
    <string name="INVALID_SESSION_COOKIE">Kolačić sesije koji služi za verifySessionCookie() je neispravan.</string>
    <string name="PHONE_NUMBER_ALREADY_EXISTS">Korisnik sa ovim brojem mobitela već postoji.</string>
    <string name="REVOKED_ID_TOKEN">ID token koji služi za verifyIdToken() je opozvan.</string>
    <string name="REVOKED_SESSION_COOKIE">Kolačić sesije specificiran za verifySessionCookie() je istekao.</string>
    <string name="UNAUTHORIZED_CONTINUE_URL">Domena URL-a za nastavak nije na popisu dopuštenih. Povezano je sa API-jima koji služe za radnju sa emailom.</string>
    <string name="USER_NOT_FOUND">Korisnik sa ovom email adresom nije pronađen!</string>
    <string name="EMAIL_ALREADY_IN_USE">Email se već koristi!</string>
    <string name="INVALID_EMAIL">Email koji ste napisali je krivoga formata.</string>
    <!--Login errors-->
    <string name="LOGIN_FAIL">Prijava nije uspjela!</string>
    <string name="WRONG_PASSWORD">Upisali ste krivu lozinku!</string>
    <!--Navigation-->
    <string name="navHome">Početna</string>
    <string name="navChart">Graf</string>
    <string name="navWallet">Novčanik</string>
    <string name="navTrade">Kupi</string>
    <string name="navProfile">Profil</string>
    <!--Image descriptions-->
    <string name="binance_logo_description">Slika Binance logotipa</string>
    <!--Home fragment-->
    <string name="welcome_text">Dobrodošli</string>
    <string name="stats_info">Vaša statistika</string>
    <string name="total_trades">Ukupan broj kupnji</string>
    <string name="total_sell_info">Ukupan broj prodaja</string>
    <string name="trade_trades_plus">Broj trgovanja u dobitku</string>
    <string name="trade_trades_minus">Broj trgovanja u gubitku</string>
    <string name="trade_trades_equals">Broj trgovanja na nuli</string>
    <string name="profit_info">Ukupan dobitak/gubitak</string>
    <string name="register_second_length_info">Registrirani ste (sekundi)</string>
    <!--Wallet Fragment-->
    <string name="current_balance">Trenutno stanje</string>
    <string name="show_active_trades">Prikaz trgovanja</string>
    <string name="trade_date">Datum i vrijeme kupnje</string>
    <string name="amount_trade">Iznos (USDT)</string>
    <string name="pair_trade">Par</string>

    <!-- TradeAdapter Dialog -->
    <string name="trade_buy_date">Datum kupnje:</string>
    <string name="trade_pair">Par:</string>
    <string name="trade_amount">Količina:</string>
    <string name="trade_investment">Ulog (USDT):</string>
    <string name="trade_current_price">Trenutna cijena:</string>
    <string name="trade_sell_price">Prodajete za:</string>
    <string name="trade_sell_profit">Ukupni dobitak ili gubitak:</string>
    <string name="trade_sell_price_red">Prodano za:</string>
    <string name="trade_sold_price">Cijena u trenutku prodaje:</string>
    <string name="trade_bought_price">Cijena u trenutku kupnje:</string>
    <string name="sell_success">Prodaja uspješna!</string>
    <string name="cancel_sell">Odustali ste od prodaje!</string>
    <string name="time_expired_sell">Vrijeme za prodaju je isteklo!</string>
    <string name="info_sell_title">Prodaja kriptovalute</string>

    <!--Wallets Logs Class-->
    <string name="creation_date">Datum kreiranja: </string>
    <!--Profile Fragment-->
    <string name="edit_user_profile">Vaš profil</string>
    <string name="update_profile">Ažuriraj</string>
    <string name="password_is_required">Nova lozinka - obavezan unos</string>
    <string name="pin_is_required">Vaš pin (4 znamenke) - obavezan unos</string>
    <string name="btn_logout">Odjava</string>
    <!--AlertDialog  Logout -->
    <string name="are_you_sure_logout">Jeste li sigurni da se želite odjaviti?</string>
    <string name="cancel_logout">Odustali ste od odjave.</string>
    <string name="logout_success">Uspješno ste se odjavili!</string>
    <!--Trade Fragment-->
    <string name="choose_pair">Odaberite par</string>
    <string name="price_info">Cijena (USDT): </string>
    <string name="buy">Kupi</string>
    <string name="sell">Prodaj</string>
    <string name="buy_amount">Unesite iznos u dolarima</string>
    <string name="invalid_pin">Pogrešan pin!</string>
    <string name="amount_missing">Potrebno je upisati iznos za koji kupujete kriptovalutu!</string>
    <string name="amount_greater_than">Upisan iznos je veći od dostupnog iznosa sa Vašeg novčanika!</string>
    <string name="amount_greater_than_ten">Iznos kupovine mora biti veći od 10 USDT!</string>

    <!--Trade Buy Dialog-->
    <string name="info_buy_title">Kupovina</string>
    <string name="info_buy_confirmation">Jeste li sigurni da želite kupiti </string>
    <string name="info_buy_confirmation_extended"> po cijeni od</string>

    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="yes_confirmation">Kupovina uspješna!</string>
    <string name="no_confirmation">Odustali ste od kupnje!</string>
    <string name="info_about_buy_price">po cijeni od</string>
    <string name="close_buy_fragment">Zatvori</string>
    <string name="time_expired">Vrijeme za kupnju je isteklo!</string>

    <!--MP Android Charts translate -->
    <string name="data_loading">Učitavanje podataka</string>

    <!--OnClick Alert Dialog -> ChartFragment -> Candle info -->
    <string name="alert_dialog_candle_info_title">Informacije o svijeći</string>
    <string name="date">Datum i vrijeme:</string>
    <string name="open">Open:</string>
    <string name="high">High:</string>
    <string name="low">Low:</string>
    <string name="close">Close:</string>
    <string name="volume">Volumen:</string>
    <string name="date_info">Datum i vrijeme odabrane svijeće</string>
    <string name="open_info">Početna cijena odabrane svijeće</string>
    <string name="high_info">Najviša cijena odabrane svijeće</string>
    <string name="low_info">Najniža cijena odabrane svijeće</string>
    <string name="close_info">Posljednja cijena odabrane svijeće</string>
    <string name="volume_info">Ukupna svota kupovina/prodaja unutar svijeće</string>
    <string name="close_alert_dialog_candle_info">Zatvori</string>
    <string name="chart_info">Informacije o grafu</string>
    <string name="chart_candle_amount">Ukupno svijeća:</string>
    <string name="chosen_symbol">Odabrani simbol:</string>
    <string name ="chosen_timeframe">Odabrani vremenski period:</string>
    <string name="red_candle_count">Broj crvenih svijeća:</string>
    <string name="green_candle_count">Broj zelenih svijeća:</string>
    <string name="equal_candle_count">Broj svijeća sa istom prethodnom close cijenom:</string>
    <!-- TimeFrames -->
    <string name="min_15">15m</string>
    <string name="min_1">1m</string>
    <string name="min_5">5m</string>
    <!-- Colors -->
    <string name="orange_trade">0</string>
    <string name="green_trade">Dobitak</string>
    <string name="red_trade">Gubitak</string>
    <string name="blue_trade">Aktivan</string>
</resources>

