<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chartFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/bckgrnd_color"
    tools:context=".Fragments.ChartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/bckgrnd_color">

        <com.github.mikephil.charting.charts.CandleStickChart
            android:id="@+id/candlestick_chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/spinnerChartPairs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.github.mikephil.charting.charts.CandleStickChart>

        <ImageButton
            android:id="@+id/btnChartInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_dialog_info"
            android:backgroundTint="#FF0E0E"
            android:contentDescription="@string/chart_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/candlestick_chart"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <RadioGroup
            android:id="@+id/radioGroupTimeFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnChartInfo">

            <RadioButton
                android:id="@+id/radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/min_5" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min_15" />
        </RadioGroup>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spinnerChartPairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>